# agentic-rag-porto-2026-workshop

./: README.md  main.py  notebook.ipynb  pyproject.toml  search.py
